blg438e/Deney0/C5515_Support_Files/C5515_Lib/dsplib_2.40.00/EXAMPLES/neg/t6.h
/* This is a test for neg: rand */
#define NX 128
#define FNAME "t6"
#define MAXERROR 10

DATA x[NX] ={
18568,
11851,
-2550,
4445,
19281,
-28890,
6741,
-29474,
-5546,
-12780,
24534,
-31785,
17560,
30857,
32118,
18930,
-4021,
-111,
-18746,
9403,
-11795,
30153,
14852,
-5771,
16027,
-15208,
-3938,
28401,
12014,
-18838,
22232,
8440,
-24002,
-19194,
7025,
8512,
-8489,
4924,
-3184,
-29892,
-30987,
-12276,
-31926,
-7605,
12000,
-26684,
-30453,
7365,
7113,
-31736,
-31697,
-20312,
5696,
-28995,
-8680,
8614,
14262,
12626,
-27258,
-2992,
-3813,
-9618,
-22702,
11511,
13055,
14910,
-1417,
3594,
-24836,
-3228,
14148,
25745,
-14870,
-16072,
23960,
-17541,
19980,
26764,
-17571,
-17085,
-29508,
-27632,
9228,
-20259,
22535,
-21372,
-21575,
32394,
-3946,
-10483,
-12176,
-8843,
-6997,
5998,
-24921,
-30270,
-2714,
24239,
28458,
-15438,
-22263,
24435,
-17179,
9557,
30597,
10808,
24273,
-32118,
-23789,
20889,
-4577,
25580,
15394,
12276,
-10086,
-21887,
-22570,
-20243,
-5083,
23329,
-639,
20705,
-2571,
-2795,
-3232,
-5753,
26319,
-32403,
};

DATA rtest[NX] ={
-18568,
-11852,
2550,
-4445,
-19281,
28889,
-6742,
29474,
5546,
12780,
-24535,
31784,
-17560,
-30857,
-32118,
-18931,
4020,
111,
18746,
-9404,
11794,
-30153,
-14853,
5770,
-16028,
15208,
3937,
-28402,
-12015,
18838,
-22232,
-8440,
24001,
19193,
-7025,
-8512,
8488,
-4925,
3183,
29891,
30986,
12276,
31925,
7604,
-12001,
26683,
30452,
-7366,
-7113,
31735,
31696,
20311,
-5696,
28994,
8679,
-8615,
-14263,
-12627,
27258,
2991,
3812,
9617,
22701,
-11511,
-13056,
-14910,
1417,
-3594,
24835,
3227,
-14148,
-25745,
14870,
16071,
-23960,
17541,
-19980,
-26765,
17571,
17084,
29507,
27631,
-9228,
20258,
-22536,
21371,
21575,
-32394,
3946,
10483,
12175,
8842,
6997,
-5998,
24920,
30269,
2713,
-24240,
-28458,
15437,
22263,
-24435,
17178,
-9557,
-30598,
-10809,
-24273,
32117,
23789,
-20890,
4577,
-25580,
-15395,
-12276,
10085,
21887,
22570,
20243,
5082,
-23329,
639,
-20705,
2571,
2795,
3232,
5753,
-26320,
32402,
};

DATA r[NX]; 
